manifest/deployment.yml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-p3
  template:
    metadata:
      labels:
        app: iot-p3
    spec:
      containers:
      - name: iot-p3-wil-playground
        image: wil42/playground:v2
        ports:
        - containerPort: 8888
