manifest/ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress
metadata:
  name: ingress-app-p3
  labels:
    app: iot-p3
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 8080
